Kubernetes/Automation/Gitea/yamls/ig-gitea.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitea-security
  namespace: gitea
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-websecure
  namespace: gitea
  annotations:
    gethomepage.dev/href: "https://gitea.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Gitea"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: gitea.svg
    gethomepage.dev/app: gitea # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Gitea"
    #gethomepage.dev/showStats: "true"
    gethomepage.dev/widget.type: "gitea"
    gethomepage.dev/widget.key: "<gitea-api-token>" # See https://docs.gitea.com/development/api-usage#generating-and-listing-api-tokens
    gethomepage.dev/widget.url: "https://gitea.domain.com"
    #gethomepage.dev/pod-selector: ""
    #gethomepage.dev/weight: 10 # optional
    #gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gitea.domain.com`)
    kind: Rule
    services:
    - name: gitea-http
      port: 3000
      serversTransport: gitea-transport
    middlewares:
      - name: gitea-security
  tls:
    secretName: gitea-domain-com
    options:
      name: gitea-tlsoptions
